--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -1,6 +1,9 @@
 .menu-status p{
     color:white !important;
     text-align: center !important;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
 }
 .menu-status{
 border: 1.5px solid var(--unnamed-color-8d8dae);
@@ -8,19 +11,23 @@ border: 1.5px solid var(--unnamed-color-8d8dae);
 border-radius: 19px;
 /* width: 150px; */
 height: 28px;
-margin-top: 1vh;
+margin-top: 2vh;
+margin: auto;
+
 }
 
 .menu-status:hover{
-
-    border-color:  #75798E !important;
+margin: auto;
+/* margin-top: 1vh; */
+    border-color:  #75798E !important; 
     border-width: 3px !important;
-    border-style: double !important;
+    border-style: double !important; 
     
 
 }
 .display-task{
-    display: block;
+    margin-bottom: 1vh;
+    display: inline-block;
 }
  .btn:focus
 {
@@ -57,9 +64,12 @@ opacity: 0.9;
     width: 140% !important;
 }
 .pencil-status{
-    /* display: inline-block; */
-    /* cursor: pointer !important; */
+    display: inline;
+    cursor: pointer !important;
     /* float: right !important; */
+    float: right;
+    margin-right: -33.5px;
+    margin-top: -14px;
 
 }
 .details-task p{
@@ -72,6 +82,7 @@ background-color: white;
 box-shadow: 0px 0px 10px #00000034;
 overflow-y: auto;
 z-index: 9999999;
+overflow-x: hidden !important;
     /* position: fixed; */
 }
 
@@ -81,7 +92,7 @@ z-index: 9999999;
 .status-list{
     margin-top: 1vh;
     max-height: 150px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 
 }
 .menu__ .form-control{
@@ -105,6 +116,7 @@ opacity: 0.15;
     margin-top: 1vh;
     margin-bottom: 3vh;
     text-align:left;
+    margin: auto ;
 /* opacity: 0.5; */
 /* border-top: 1px solid #707070; */
 }
