--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -5,6 +5,8 @@
     box-shadow: none !important;
     /* overflow: hidden !important; */
     max-height: 500px;
+    resize: none;
+
     /* padding: 0 !important; */
 }
 .more-task {
