--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -66,13 +66,14 @@ opacity: 0.9;
     text-align: left !important;
 }
 .menu__{
-   
-background-color: white;
-/* width: 110%; */
-box-shadow: 0px 0px 10px #00000034;
-overflow-y: auto;
-z-index: 9999999;
-    /* position: fixed; */
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 0px 10px #00000034;
+    overflow-y: auto;
+    z-index: 9999999;
+}
+.view-list-status-from-platform{
+    position: absolute !important;
 }
 
 .divStatus{
