--- a/src/component/hubFeature/chart/chart.css
+++ b/src/component/hubFeature/chart/chart.css
@@ -11,13 +11,16 @@
     border: 0.1em solid rgb(204 238 240);
     border-radius: 1%;
     height:100%;
+    width: 100%;
+    padding: 2%;
 }
 .col-3>.chartCol{
     border-radius: 3%;
 }
 .bParam{
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.7rem;
+    font-weight: 400;
+    padding-left: 5%;
 }
 .MuiPaper-rounded{
     border-radius:0 !important;
@@ -39,4 +42,14 @@ g g g g g text{
 }
 .divProjectStatistics{
     background-color:white;
+}
+.apexcharts-title-text{
+    font-size:1.2vw !important;
+}
+.h100 b:first-child{
+    font-size:1vw;
+}
+foreignObject, #apexchartsbho0iybo, #SvgjsSvg1916, .apexchartsglem8ue1, #SvgjsSvg1401, .pChart, #apexchartsvtug7ujd, #SvgjsSvg1300 {
+    width:100% !important;
+    height: 100% !important;
 }
